// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Leaflet maps renders structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "37.5px",
      "width": "50px",
    }
  }
>
  <Alert
    bootstrapStyle="danger"
    className="widget-leaflet-maps-alert leaflet-control"
  />
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <div
      className="widget-leaflet-maps"
    />
    <ResizeDetector
      handleHeight={true}
      handleWidth={true}
      nodeType="div"
      onResize={[Function]}
      querySelector={null}
      refreshMode="throttle"
      refreshRate={100}
      skipOnMount={false}
      targetDomEl={null}
    />
  </div>
</div>
`;

exports[`Leaflet maps with percentage of parent units renders the structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75%",
      "width": "50%",
    }
  }
>
  <Alert
    bootstrapStyle="danger"
    className="widget-leaflet-maps-alert leaflet-control"
  />
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <div
      className="widget-leaflet-maps"
    />
    <ResizeDetector
      handleHeight={true}
      handleWidth={true}
      nodeType="div"
      onResize={[Function]}
      querySelector={null}
      refreshMode="throttle"
      refreshRate={100}
      skipOnMount={false}
      targetDomEl={null}
    />
  </div>
</div>
`;

exports[`Leaflet maps with percentage of width and height units renders the structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "auto",
      "paddingBottom": "37.5%",
      "width": "50%",
    }
  }
>
  <Alert
    bootstrapStyle="danger"
    className="widget-leaflet-maps-alert leaflet-control"
  />
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <div
      className="widget-leaflet-maps"
    />
    <ResizeDetector
      handleHeight={true}
      handleWidth={true}
      nodeType="div"
      onResize={[Function]}
      querySelector={null}
      refreshMode="throttle"
      refreshRate={100}
      skipOnMount={false}
      targetDomEl={null}
    />
  </div>
</div>
`;

exports[`Leaflet maps with pixels renders structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50px",
    }
  }
>
  <Alert
    bootstrapStyle="danger"
    className="widget-leaflet-maps-alert leaflet-control"
  />
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <div
      className="widget-leaflet-maps"
    />
    <ResizeDetector
      handleHeight={true}
      handleWidth={true}
      nodeType="div"
      onResize={[Function]}
      querySelector={null}
      refreshMode="throttle"
      refreshRate={100}
      skipOnMount={false}
      targetDomEl={null}
    />
  </div>
</div>
`;
